# newmachine

./: README.md  pyproject.toml
classification/Bayes/: gauss_naive_bayes.py  multionomial_naive_bayes.py
classification/DecisionTree/: draw_line.py  formal.py  formal2.py  non_prune.py  prune.py
classification/KNN/: formal.py
classification/Label_Encoder/: formal.py
classification/Logic/: log_loss.py  sigmoid.py  softmax.py  softmax_l2_weight_decay.py
cluster/agnes/: self版本.py  向量化版本.py
cluster/distance/: L00_distance.py  L1_distance.py  L2_distance.py  cosine_distance.py
cluster/evaluation/: 标签匹配.py
cluster/km/: funcanimation.py  kmedoids.py  roulette.py  twokmeans.py
cluster/kmeans/: kmeans.py  kmedoids.py  twokmeans.py
ensemble/bagging/: formal.py
ensemble/boosting/: cart.py  gbdt-binary.py  gbdt-multy.py  gbdt-regression.py  集成思想.md
ensemble/voting/: formal.py
ensemble/xgb/: cv_param.md  formal.py  model_param.md  train_param.md
metric/classification/: f1_score_threshold.py  load_model.py  one_vs_one.py  one_vs_rest.py
metric/models/: best_threshold.pkl
metric/multilabel_classification/: jaccard.py  sklmethod.py
network/Perceptron/: binary.py  regression.py  softmax.py
network/mulgauss/: formal.py
network/optimize/: momentum2d.py  momentum3d.py  optimer2d.py  optimer3d.py
probamodel/Em/: em.py  向量化实现em.py
regression/DecisionTree/: formal.py
regression/KNN/: formal.py
regression/gradient/: formal.py  formal2.py  logcosh_vs_mse.py
regression/leastsq/: formal.py
regression/lwlr/: formal.py  向量写法.py
regression/解方程/: 牛顿法.py  (+2 more)
(+7 files in other folders)
