[project]
name = "newmachine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "jax>=0.8.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "sympy>=1.14.0",
    "xgboost>=3.1.3",
]
